--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
         <div id='cssmenu'>
             <ul>
                 <li class='active'><a href='#home'>Home</a></li>
-                <li class='active'><a href='#about'>About</a></li>
-                <li class='active'><a href='#'>Teachers</span></a></li>
-                <li class='has-sub'><a href='#'>Students</a>
-                    <ul>
-                        <li><a href='projects.html'>Projects</a></li>
-                        <li><a href='achievements.html'>Achievements</a></li>
-                    </ul>
-                </li>
+                <li class='active'><a href='#about'><span>About</span></a></li>
+                <li class='active'><a href='projects.html'>Projects</a></li>
+                <li class='active'><a href='achievements.html'>Achievements</a></li>
                 <li class='last'><a href='#contact'><span>Contact</span></a></li>
             </ul>
         </div>
@@ -57,35 +52,43 @@
             <div><img src="img/header1.gif" alt=""></div>
         </div>
 
+
+
         <!-- Start About  -->
-        <div class="about" id="about">
-            <div class="about-top"></div>
-            <div class="about-content">
-                <h1 class="about-header">About</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ad magnam corporis commodi et hic illo sunt officiis quibusdam modi.</p>
-            </div>
-        </div>
+
         <section class="about-information">
             <section>
-                <div class="image-about">
-                    <img src="img/about-1.jpeg" alt="">
-                </div>
-                <div class="text-about">
-                    <h3>Lorem</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde alias, aut excepturi ipsa optio consequatur ipsam officiis quaerat, commodi ratione quia, corrupti amet maiores delectus? Obcaecati incidunt quaerat suscipit officiis.</p>
-                </div>
+                <div class="container">
+                    <br/>
+                    <div class="image" style="background-image: url(img/about-1.jpeg)">
+                        <a href="projects.html">Projects</a>
+                    </div>
+                    <div class="image-about">
+                    </div>
+                    <div class="text-about">
+                        <h3>About</h3>
+                        <p>You are on the wed-site of our dream team.Who are we?We are future developers of artificial intellegence.Now we are studing at Lviv Natioanal University and we are really prouud of it.</p>
+                    </div>
             </section>
             <section>
                 <div class="text-about">
-                    <h3>Lorem</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde alias, aut excepturi ipsa optio consequatur ipsam officiis quaerat, commodi ratione quia, corrupti amet maiores delectus? Obcaecati incidunt quaerat suscipit officiis.</p>
+                    <h4>"Here you can see our achivments and progress in developing."</h4>
+                    <p>Each student is really to discovering new progressive tecchnologies and making our future easier and better step by step.We believe that new generation can imrove this world. </p>
                 </div>
                 <div class="image-about">
-                    <img src="img/about-2.jpeg" alt="">
-                </div>
+                    <div class="container">
+                        <br/>
+                        <div class="image" style="background-image: url(img/about-2.jpeg)">
+                            <a href="achievements.html">Achievements</a>
+                        </div>
+                    </div>
             </section>
         </section>
         <!-- End About -->
+
+
+
+
 
         <!-- Start Contact -->
 
@@ -287,10 +290,10 @@
         </div> -->
 
         <!-- End page content -->
-    </div>
+        </div>
 
-    <!-- Newsletter Modal -->
-    <!-- <div id="newsletter" class="w3-modal">
+        <!-- Newsletter Modal -->
+        <!-- <div id="newsletter" class="w3-modal">
         <div class="w3-modal-content w3-animate-zoom" style="padding:32px">
             <div class="w3-container w3-white w3-center">
                 <i onclick="document.getElementById('newsletter').style.display='none'" class="fa fa-remove w3-right w3-button w3-transparent w3-xxlarge"></i>
@@ -300,14 +303,14 @@
                 <button type="button" class="w3-button w3-padding-large w3-red w3-margin-bottom" onclick="document.getElementById('newsletter').style.display='none'">Subscribe</button>
             </div>
         </div> -->
-    </div>
+        </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="slick/slick.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBGrXuj0CHcORQIBxzmdNCI3NuxsE4CkI&callback=initMap" async defer></script>
-    <script src="js/main.js"></script>
-    <script src="js/google-map.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="slick/slick.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBGrXuj0CHcORQIBxzmdNCI3NuxsE4CkI&callback=initMap" async defer></script>
+        <script src="js/main.js"></script>
+        <script src="js/google-map.js"></script>
 
 </body>
 
