implement some text block

--- a/index.html
+++ b/index.html
@@ -51,15 +51,45 @@
             <div><img src="img/slider3.jpeg" alt=""></div>
             <div><img src="img/header1.gif" alt=""></div>
         </div>
-
-
-
-        <!-- <div class="image" style="background-image: url(img/about-1.jpeg)"> -->
-        <!-- <div class="image" style="background-image: url(img/about-2.jpeg)">
-               
-            </div> -->
-
     </div>
+
+
+    <!-- SOME TEXT BLOXK START -->
+    <section class="some-text-block">
+        <div class="container">
+            <div class="blocks-group">
+                <div class="left-side-block">
+                    <h1>01</h1>
+                    <div class="some-text">
+                        <p class="up-header">some text</p>
+                        <h3>About</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, cupiditate!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, fugiat, labore error perspiciatis rem assumenda delectus dolor amet enim doloremque consequuntur eos velit quam ullam ea temporibus, nobis facilis at perferendis voluptates
+                            possimus. Soluta illum sunt facere at labore aliquam!</p>
+                        <a href="projects.html">Projects</a>
+                    </div>
+
+                </div>
+                <div class="right-side-block">
+                    <h1>02</h1>
+                    <div class="some-text">
+                        <p class="up-header">some text</p>
+                        <h3>About</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, cupiditate!</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, fugiat, labore error perspiciatis rem assumenda delectus dolor amet enim doloremque consequuntur eos velit quam ullam ea temporibus, nobis facilis at perferendis voluptates
+                            possimus. Soluta illum sunt facere at labore aliquam!</p>
+                        <a href="achievements.html">Achievements</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- SOME TEXT BLOXK END -->
+    <style>
+
+    </style>
+
+
     <!-- Start About  -->
     <section class="image-gallery">
         <div class="container">
@@ -88,9 +118,7 @@
     </section>
     <!-- End About -->
 
-    <style>
 
-    </style>
 
 
     <div id="map"></div>
