set logo to sidebar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li class='active'><a href='achievements.html'>Achievements</a></li>
                 <li class='last'><a href='#contact'><span>Contact</span></a></li>
             </ul>
+            <img src="img/logo.png" alt="">
         </div>
     </nav>
 
