add project head and done some style refactroring

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <div id='cssmenu'>
             <ul>
                 <li class='active'><a href='#home'>Home</a></li>
-                <li class='active'><a href='#about'><span>About</span></a></li>
+
                 <li class='active'><a href='projects.html'>Projects</a></li>
                 <li class='active'><a href='achievements.html'>Achievements</a></li>
                 <li class='last'><a href='#contact'><span>Contact</span></a></li>
             </ul>
-            <img src="img/logo.png" alt="">
+            <img class="logo" src="img/logo.png" alt="">
         </div>
     </nav>
 
@@ -63,11 +63,11 @@
                     <h1>01</h1>
                     <div class="some-text">
                         <p class="up-header">some text</p>
-                        <h3>About</h3>
+                        <a href="projects.html">Projects</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, cupiditate!</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, fugiat, labore error perspiciatis rem assumenda delectus dolor amet enim doloremque consequuntur eos velit quam ullam ea temporibus, nobis facilis at perferendis voluptates
                             possimus. Soluta illum sunt facere at labore aliquam!</p>
-                        <a href="projects.html">Projects</a>
+
                     </div>
 
                 </div>
@@ -75,11 +75,11 @@
                     <h1>02</h1>
                     <div class="some-text">
                         <p class="up-header">some text</p>
-                        <h3>About</h3>
+                        <a href="achievements.html">Achievements</a>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, cupiditate!</p>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, fugiat, labore error perspiciatis rem assumenda delectus dolor amet enim doloremque consequuntur eos velit quam ullam ea temporibus, nobis facilis at perferendis voluptates
                             possimus. Soluta illum sunt facere at labore aliquam!</p>
-                        <a href="achievements.html">Achievements</a>
+
                     </div>
                 </div>
             </div>
