--- a/achievements.html
+++ b/achievements.html
@@ -26,11 +26,12 @@
         <div id='cssmenu'>
             <ul>
                 <li class='active'><a href='index.html'>Home</a></li>
-                <li class='active'><a href='index.html#about'><span>About</span></a></li>
+
                 <li class='active'><a href='projects.html'>Projects</a></li>
                 <li class='active'><a href='achievements.html'>Achievements</a></li>
                 <li class='last'><a href='index.html#contact'><span>Contact</span></a></li>
             </ul>
+            <img class="logo" src="img/logo.png" alt="">
         </div>
     </nav>
 
