modified some code

--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
                 <h1>Giraffe bot 2.0</h1>
                 <div class="text">
                     <p><b>Team:</b> Taras Shmilyk,Olena Pylypiv,Pavlo Faryna,Roman Pidkostelniy</p>
-                    <p>The bot is able to send us our studying schedule (you can ask whether you have lessons on monday, tuesday, etc.) the bot now can learn - if you want to teach him some new phrases, just use a special command and he'll remember this
+                    <p class='truncated'>The bot is able to send us our studying schedule (you can ask whether you have lessons on monday, tuesday, etc.) the bot now can learn - if you want to teach him some new phrases, just use a special command and he'll remember this
                         (in the near future we will make this learning intelligent: the bot won't accept rude words and filter expressions)</p>
                 </div>
             </div>
@@ -90,13 +90,13 @@
         <!-- START CARD -->
         <div class="card">
             <div class="team-photo">
-                <img src="img/solarsys.png" alt="team photo">
+                <img src="img/solar system.png" alt="team photo">
             </div>
             <div class="description">
                 <h1>SolAR System</h1>
                 <div class="text">
-                    <p><b>Team:</b> Taras Shmilyk,Olena Pylypiv,Pavlo Faryna,Roman Pidkostelniy</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, voluptatum ea. Saepe quae dolores sapiente labore, fugit minus quo facilis!</p>
+                    <p><b>Team:</b> Glib Shchur,Shevchuk Ihor,Shvayenko Oleksandr,Tsap Vladyslav,Khalus Bohdan,Savchenko Andriy,Romaniv Yaryna,Pylyp Anastasiya,Knyupa Oleksandr</p>
+                    <p class='truncated'>Have you ever.</p>
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
                 <h1>Game "Restoration"</h1>
                 <div class="text">
                     <p><b>Team:</b></p>
-                    <p>This is a post-apocalyptic game about global contamination of the planet. We want to show what can happen if humanity does not start to look after the environment and what horrible consequences it will bring in the future.</p>
+                    <p class='truncated'>This is a post-apocalyptic game about global contamination of the planet. We want to show what can happen if humanity does not start to look after the environment and what horrible consequences it will bring in the future.</p>
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
                 <div class="text">
                     <p><b>Team:</b> Andriy Pytel,Kris Zgaschak,Marian Sydor,Vitaliy Savchyn,Serhiy Shchehelskiy,Iryna Didoshak.
                     </p>
-                    <p>This is a post-apocalyptic game about global contamination of the planet. We want to show what can happen if humanity does not start to look after the environment and what horrible consequences it will bring in the future.</p>
+                    <p class='truncated'>This is a post-apocalyptic game about global contamination of the planet. We want to show what can happen if humanity does not start to look after the environment and what horrible consequences it will bring in the future.</p>
                 </div>
             </div>
         </div>
@@ -158,7 +158,9 @@
             <div class="description">
                 <h1>Team Name</h1>
                 <div class="text">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, voluptatum ea. Saepe quae dolores sapiente labore, fugit minus quo facilis!
+                    <p><b>Team:</b> Inesa Hermaniuk and Nazar Mamchur</p>
+                    <p class='truncated'>We are working on Android app, which helps to find interesting events in your city not far from you exactly on a map. User can join the event, having seen its venue, invite friends, see other members and ratings among users. In addition,
+                        you can create your own events and invite people. You may send invitations to your friends and wait for their acceptance or refusal or may make the event available for everyone.</p>
                 </div>
             </div>
         </div>
@@ -175,7 +177,7 @@
                 <h1>Tracefull</h1>
                 <div class="text">
                     <p><b>Team:</b> Inesa Hermaniuk and Nazar Mamchur</p>
-                    <p>We are working on Android app, which helps to find interesting events in your city not far from you exactly on a map. User can join the event, having seen its venue, invite friends, see other members and ratings among users. In addition,
+                    <p class='truncated'>We are working on Android app, which helps to find interesting events in your city not far from you exactly on a map. User can join the event, having seen its venue, invite friends, see other members and ratings among users. In addition,
                         you can create your own events and invite people. You may send invitations to your friends and wait for their acceptance or refusal or may make the event available for everyone.</p>
                 </div>
             </div>
@@ -192,7 +194,7 @@
                 <h1>STUDENT'S DIARY</h1>
                 <div class="text">
                     <p><b>Team:</b> Nazar Los,Andriy Tymkiv,Julia Yuvchenko,Nastia Antonyk,Vitaliy Horishnyi.</p>
-                    <p> "Oh , what is my hometask, does anyone know it?? It's very boring to find on all group's mеssages!" "Where is it? Where am I suppose to find it? I don't have this book! " "I wrote important information on a piece of paper, but I lost
+                    <p class='truncated'> "Oh , what is my hometask, does anyone know it?? It's very boring to find on all group's mеssages!" "Where is it? Where am I suppose to find it? I don't have this book! " "I wrote important information on a piece of paper, but I lost
                         it! What could I do now??" Іf you are a student - you definitly understand what this sentences about. So we decided to develop an Android App which will solve such problems.</p>
                 </div>
             </div>
@@ -210,7 +212,7 @@
                 <h1>Polytechnic Guide</h1>
                 <div class="text">
                     <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
+                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
                         here the main map of location all university buildings and their photos,description,etc..</p>
                 </div>
             </div>
@@ -227,7 +229,7 @@
                 <h1>Polytechnic Guide</h1>
                 <div class="text">
                     <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
+                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
                         here the main map of location all university buildings and their photos,description,etc..</p>
                 </div>
             </div>
@@ -243,7 +245,7 @@
                 <h1>Polytechnic Guide</h1>
                 <div class="text">
                     <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
+                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
                         here the main map of location all university buildings and their photos,description,etc..</p>
                 </div>
             </div>
@@ -259,7 +261,7 @@
                 <h1>Polytechnic Guide</h1>
                 <div class="text">
                     <p><b>Team:</b> Yurii Drevnytskyi</p>
-                    <p>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
+                    <p class='truncated'>It is an helpful adaptive website which help you to navigate in Polytechnic university. Its show the right way between buildings of the university,transport which u need and,the location of the main transport stops.Also you can find
                         here the main map of location all university buildings and their photos,description,etc..</p>
                 </div>
             </div>
@@ -297,25 +299,6 @@
     <!-- END A CONTENT -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-    <script>
-        let element = document.getElementsByClassName('truncated')[0];
-        let card = document.getElementsByClassName('card')[0];
-        let length = 90;
-        let trimmedString = element.innerHTML.substring(0, length);
-        document.getElementsByClassName('truncated')[0].innerHTML = trimmedString + '...';
-
-        element.addEventListener("mouseout", () => {
-            let length = 93;
-            let trimmedString = element.innerHTML.substring(0, length);
-            document.getElementsByClassName('truncated')[0].innerHTML = trimmedString;
-        });
-
-        element.addEventListener("mouseover", () => {
-            let length = 90;
-            let trimmedString = element.innerHTML.substring(0, length);
-            document.getElementsByClassName('truncated')[0].innerHTML = trimmedString + '...Have you ever imagined what will happen if you will see whole solar system in your room?We give you opportunity to see it!Welcome to SolAR System!';
-
-        });
-    </script>
+    <script src="js/truncated.js"></script>
 
 </body>
