--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
         <div class="container">
             <article class="gallery-group">
                 <div class="gallery-item">
-                    <img src="img/about-1.jpeg" alt="">
+                    <img src="img/1.jpg" alt="">
                 </div>
                 <div class="gallery-item">
                     <img src="img/about-1.jpeg" alt="">
                 </div>
                 <div class="gallery-item">
-                    <img src="img/about-1.jpeg" alt="">
+                    <img src="img/solar system.png" alt="">
                 </div>
 
                 <div class="gallery-item">
-                    <img src="img/about-1.jpeg" alt="">
+                    <img src="img/2.jpg" alt="">
                 </div>
                 <div class="gallery-item">
-                    <img src="img/about-1.jpeg" alt="">
+                    <img src="img/bot.jpg" alt="">
                 </div>
                 <div class="gallery-item">
                     <img src="img/about-1.jpeg" alt="">
