--- a/projects.html
+++ b/projects.html
@@ -253,7 +253,7 @@
         <!-- END CARD -->
 
         <!-- START CARD -->
-        <div class="card">
+        <div class="card" id="team1">
             <div class="team-photo">
                 <img src="img/guid.jpg" alt="team photo">
             </div>
