responsive project page and add js code for burger menu

--- a/achievements.html
+++ b/achievements.html
@@ -1308,6 +1308,7 @@
     <script type="text/javascript" src="slick/slick.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/burger-menu.js"></script>
 
 </body>
 
