--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBGrXuj0CHcORQIBxzmdNCI3NuxsE4CkI&callback=initMap" async defer></script>
     <script src="js/main.js"></script>
     <script src="js/google-map.js"></script>
+    <script src="js/burger-menu.js"></script>
 
 </body>
 
