--- a/projects.html
+++ b/projects.html
@@ -269,9 +269,6 @@
         <!-- END CARD -->
     </div>
 
-
-    <div class="under"></div>
-
     <footer>
         <div>
             <h3 class="w3-wide"><b>AI</b> Students</h3>
@@ -300,5 +297,6 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="js/truncated.js"></script>
+    <script src="js/burger-menu.js"></script>
 
 </body>
