made sticky footer

--- a/achievements.html
+++ b/achievements.html
@@ -1297,7 +1297,7 @@
         </footer>
 
         <!-- Push down content on small screens -->
-        <div class="w3-hide-large" style="margin-top:83px"></div>
+        <!-- <div class="w3-hide-large" style="margin-top:83px"></div> -->
 
     </div>
 
