--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </footer>
     <!-- End Contact -->
     <!-- Push down content on small screens -->
-    <div class="w3-hide-large" style="margin-top:83px"></div>
+    <!-- <div class="w3-hide-large" style="margin-top:83px"></div> -->
 
     <!-- Top header
         <header class="w3-container w3-xlarge">
