made responsive home page

--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
                     <img src="img/about-1.jpeg" alt="">
                 </div>
                 <div class="gallery-item">
-                    <img src="img/solar system.png" alt="">
+                    <img src="img/1.jpg" alt="">
                 </div>
 
                 <div class="gallery-item">
-                    <img src="img/2.jpg" alt="">
-                </div>
-                <div class="gallery-item">
-                    <img src="img/bot.jpg" alt="">
+                    <img src="img/about-1.jpeg" alt="">
                 </div>
                 <div class="gallery-item">
                     <img src="img/about-1.jpeg" alt="">
+                </div>
+                <div class="gallery-item">
+                    <img src="img/1.jpg" alt="">
                 </div>
             </article>
         </div>
@@ -341,4 +341,4 @@
 
 </body>
 
-</html>s
+</html>
