--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>AI Students | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='shortcut icon' type='image/x-icon' href="img/logo_fug_icon.ico" />
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -66,8 +67,10 @@
         
         @media screen and (max-width: 992px) {
             #home {
-                margin-top: 84px;
-                margin-left: 0px;
+                display: none;
+            }
+            .blocks-group {
+                margin-top: 100px;
             }
         }
     </style>
